--- a/velkavalka.css
+++ b/velkavalka.css
@@ -37,6 +37,13 @@
 		padding: 0 0 15px 0;
 	}
 
+	#map{
+		border: 1px solid black;
+		width: 100%;
+		height: 200px;
+
+	}
+
 	.kolapsmenu {
 		padding: 0px 10px;
 		max-height: 0;
@@ -239,9 +246,8 @@
 
 	#map{
 		border: 1px solid black;
-		width: 400px;
+		width: 100%;
 		height: 200px;
-		margin: 2%;
 	}
 
 	.index-obr-velky {
@@ -251,15 +257,6 @@
 		height: 400px;
 		background-repeat: no-repeat;
 	}
-
-	.zajimavosti-obr-velky {
-		background-image: url("zajimavostiobr.jpg");
-		background-color: #000000;
-		width: 100%;
-		height: 400px;
-		background-repeat: no-repeat;
-	}
-
 
 	ul {
 		list-style-type: none;
