--- a/velkavalka.css
+++ b/velkavalka.css
@@ -210,7 +210,7 @@
 		background-repeat: no-repeat;
 	}
 
-	ul {
+	#headerseznam {
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
@@ -228,6 +228,11 @@
 		text-align: center;
 		padding: 10px 25px;
 		text-decoration: none;
+	}
+
+	ul{
+		float: left;
+		list-style-type: disc;
 	}
 
 	.menu {
