--- a/velkavalka.css
+++ b/velkavalka.css
@@ -456,9 +456,13 @@
 #prid-Data_left{
 	width: 50%;
 	float: left;
+	
+	margin: 10px 0 10px 0;
 }
 
 #prid-Data_right{
 	width: 50%;
 	float: right;
+	margin: 10px 0 10px 0;
 }
+
