--- a/velkavalka.css
+++ b/velkavalka.css
@@ -162,6 +162,18 @@
 		display: none;
 	}
 
+	.respons-galerie {
+		width: 49.9999%;
+		margin: 0 auto;
+		padding-top: 10px;
+	}
+
+	.respons-galerie2 {
+		width: 49.9999%;
+		margin: 0 auto;
+		padding-top: 10px;
+	}
+
 }
 
 /* Laptopy a větší obrazovky */
@@ -466,8 +478,22 @@
 	margin: 10px 0 10px 0;
 }
 
+#imgVezni{
+	background-image: url("auschw.jpg");
+	float: left;
+	background-color: #000000;
+	width: 35%;
+	height: 500px;
+	background-repeat: no-repeat;
+}
+
 .item{
-	border: 1px solid white;
-	padding: 2px;
+	padding: 12px;
+	border: 1px solid black;
+	border-radius: 3px;
+	width: 24%;
+	margin-right: 1%;
+	margin-top: 10px;
+	display: inline-block;
 }
 
